# greatshot

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  io.github.syed.greatshot.json  meson.build
data/: io.github.syed.greatshot.desktop  io.github.syed.greatshot.desktop.in  io.github.syed.greatshot.gschema.xml  io.github.syed.greatshot.metainfo.xml  io.github.syed.greatshot.service.in  meson.build
data/icons/: meson.build
flatpak/: README.md  io.github.syed.greatshot.yml
po/: POTFILES.in  meson.build
snap/: snapcraft.yaml
src/: application.rs  config.rs  editor.rs  greatshot.gresource.xml  main.rs  meson.build  style-dark.css  style.css  ui.rs  window.rs  window.ui
src/icons/scalable/actions/: LICENSE
