[package]
name = "greatshot"
version = "0.1.0"
edition = "2024"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_6"] }
ashpd = { version = "0.9", features = ["gtk4"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "time"] }
gdk-pixbuf = "0.20"